CMF 1.5.0rc1 (unreleased)

  Bug Fixes

    - RegistrationTool: Generated passwords no longer contain 'OQ0Il1'.

    - The permalink feature is now turned off by default and may be turned 
      on by setting the boolean property 'enable_permalink' in the cmfs 
      root property sheet through the ZMI. Through the 'get_permalink' 
      script the permanent link of an content object can be asked for. 
      Additionaly the site may be asked if the permalink feature is turned
      on or not by adding 'isAvailable' instead of an unique id
      (http://www.example.com/permalink/isAvailable). Returns '1' or '0'.
      Also removed the badly designed 'tal:on-error' directive in 
      'main_template'.


CMF 1.5.0beta2 (2004/09/27)

  New Features

    - CookieCrumbler: Merged changes from standalone version.
      Cookies set on an HTTPS connection are now marked as secure, meaning
      they will not be transmitted over HTTP.

    - PortalFolder: New 'Folderish' Interface defines the 'content*'
      methods.

    - PortalFolder: Improved WebDAV folder listings.
      Hidden sub-objects like tools are now filtered out. To see all
      sub-objects, you need the 'Manage portal' permission.

    - TypesTool: New properties can be added from the ZMI to
      TypeInformation objects.

  Bug Fixes

    - CMFDefault/Document:  store / return size of "raw" source text for
      'get_size'.

    - ZPT skin: Refactored registered_notify_template.
      For security reasons, it no longer adds the password to the login URL.

    - PortalFolder: Fixed '_checkId' policy.
      In a subfolder, members without 'Manage portal' permission were not
      able to create content items whose names clashed with content items
      in the portal root.

    - CookieCrumbler: Improved 'came_from' URL.
      Problems in connection with stack manipulation on traversal or usage
      of 'traverse_subpath' should be fixed now.
